# spirv-cmake-elf-test

./: CMakeLists.txt  foo.c
shaders/: sample.comp.glsl  sample.frag.glsl  sample.vert.glsl
shaders/include/: foo.glsl  ssbo.glsl
